Altered top on the main.

--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="main" style="opacity: 1; top: 0;">
+    <div class="main">
         <div class="topping">
             <div class="container-top">
                 <div class="summary">
