--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Happiness is found when you stop comparing yourself to others.">
     <meta property="og:title" content="B3none | Alex Blackham">
     <meta property="og:type" content="image/jpeg">
-    <meta property="og:image" content="./images/moi.jpg">
+    <meta property="og:image" content="https://b3none.gamssi.com/images/moi.jpg">
     <meta property="og:image:height" content="640">
     <meta property="og:image:width" content="640">
     <meta property="og:description" content="Web Developer, Derbyshire.">
