--- a/web/index.html
+++ b/web/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta name="description" content="Happiness is found when you stop comparing yourself to others.">
+    <meta name="description" content="Web Developer from the United Kingdom. Also a huge fan of anything open-source!">
     <meta property="og:title" content="B3none | Alex Blackham">
     <meta property="og:type" content="image/jpeg">
     <meta property="og:image" content="https://b3none.gamssi.com/images/moi.jpg">
     <meta property="og:image:height" content="640">
     <meta property="og:image:width" content="640">
-    <meta property="og:description" content="Web Developer, Derbyshire.">
+    <meta property="og:description" content="Web Developer from the United Kingdom. Also a huge fan of anything open-source!">
 
     <link rel="apple-touch-icon" sizes="57x57" href="./images/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="./images/favicon/apple-icon-60x60.png">
