Added titles for links.

--- a/web/index.html
+++ b/web/index.html
@@ -45,17 +45,17 @@
                     <div class="list-group">
                         <ul>
                             <li>
-                                <a href="https://steamcommunity.com/id/b3none" target="_blank">
+                                <a href="https://steamcommunity.com/id/b3none" title="Steam" target="_blank">
                                     <img src="./images/icons/steam.svg">
                                 </a>
                             </li>
                             <li>
-                                <a href="https://github.com/b3none" target="_blank">
+                                <a href="https://github.com/b3none" title="Github" target="_blank">
                                     <img src="./images/icons/github.svg">
                                 </a>
                             </li>
                             <li>
-                                <a href="https://discord.gg/N3wH8gc" target="_blank">
+                                <a href="https://discord.gg/N3wH8gc" title="Discord" target="_blank">
                                     <img src="./images/icons/discord.svg">
                                 </a>
                             </li>
