Added yuckers SVG. Gotta go find a better one at some point

--- a/web/index.html
+++ b/web/index.html
@@ -55,6 +55,11 @@
                                 </a>
                             </li>
                             <li>
+                                <a href="https://stackoverflow.com/users/8471992/b3none" title="Stack Overflow" target="_blank">
+                                    <img src="./images/icons/stack-overflow.svg">
+                                </a>
+                            </li>
+                            <li>
                                 <a href="https://discord.gg/N3wH8gc" title="Discord" target="_blank">
                                     <img src="./images/icons/discord.svg">
                                 </a>
