--- a/web/index.html
+++ b/web/index.html
@@ -54,7 +54,7 @@
                                     <img src="./images/icons/github.svg">
                                 </a>
                             </li>
-                            <li class="d-none d-sm-none d-md-none d-lg-inline-block">
+                            <li class="stack-overflow-icon d-lg-inline-block">
                                 <a href="https://stackoverflow.com/users/8471992/b3none" title="Stack Overflow" target="_blank">
                                     <img src="./images/icons/stack-overflow.svg">
                                 </a>
