--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Web Developer from the United Kingdom. Also a huge fan of anything open-source!">
     <meta property="og:title" content="B3none | Alex Blackham">
     <meta property="og:type" content="image/jpeg">
-    <meta property="og:image" content="https://b3none.gamssi.com/images/moi.jpg">
+    <meta property="og:image" content="https://b3none.co.uk/images/moi.jpg">
     <meta property="og:image:height" content="640">
     <meta property="og:image:width" content="640">
     <meta property="og:description" content="Web Developer from the United Kingdom. Also a huge fan of anything open-source!">
