update discord invite link

--- a/web/index.html
+++ b/web/index.html
@@ -60,7 +60,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://discord.gg/N3wH8gc" title="Discord" target="_blank">
+                                <a href="https://discord.gg/HUc67zN" title="Discord" target="_blank">
                                     <img src="./images/icons/discord.svg">
                                 </a>
                             </li>
